--- a/MokaPos/Storyboards/Detail.storyboard
+++ b/MokaPos/Storyboards/Detail.storyboard
@@ -229,8 +229,9 @@
                                                         </label>
                                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sq8-LI-Hds">
                                                             <rect key="frame" x="275" y="15.5" width="51" height="31"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <connections>
-                                                                <action selector="switchValueChanged:" destination="sM8-ZZ-Uh4" eventType="valueChanged" id="r1W-dx-QmW"/>
+                                                                <action selector="switchValueChanged:" destination="sM8-ZZ-Uh4" eventType="valueChanged" id="G6f-qn-gs0"/>
                                                             </connections>
                                                         </switch>
                                                     </subviews>
@@ -253,7 +254,7 @@
                                         </connections>
                                     </collectionView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="B0Y-W9-3TQ" firstAttribute="leading" secondItem="7tv-po-NSg" secondAttribute="leading" constant="15" id="5pB-4p-6Ob"/>
                                     <constraint firstItem="B0Y-W9-3TQ" firstAttribute="top" secondItem="6d7-aW-fbC" secondAttribute="bottom" constant="10" id="68C-n5-6LD"/>
